Changes with APR a9

  *) Add Win32 MMAP support [William Rowe]

  *) Allow the APR programmer to specify if the MMAP is read-only or
     write-able.
     [Ryan Bloom and Will Rowe]

  *) Check more carefully for getaddrinfo().  Accept those that
     require <netdb.h> to be included (e.g., Tru64).  Reject those that 
     fail a very basic operational test (e.g., AIX).  [Jeff Trawick]

  *) Add apr_make_os_sock() for constructing a fully-capable APR
     socket.  [Jeff Trawick]

  *) Make APR's shared memory routines always allocate enough memory
     for the requested segment, the MM internal types, and the APR
     internal types.
     [Ryan Bloom]

  *) Add APR_SIZE_T_FMT.  Get the other APR_xx_T_FMT variables
     defined properly on AIX.  [Jeff Trawick]

  *) network API changes: get rid of apr_get_socket_inaddr(), 
     apr_get_remote_name(), and apr_get_local_name()  [Jeff Trawick]

  *) Add a step at configure time to create a file at the top-level,
     apr.exports, which lists every function exported by APR.  The
     file is generated by a script in helpers, that reads each header
     file.
     [Ryan Bloom]

  *) Lock config changes: Detect SysV sem capability by the presence of
     sempaphore functions, not by the presence of union semun.  New
     config variable apr_lock_method can override autodetection of the 
     apr_lock implementation method.  For now, hints.m4 uses it to select 
     SysV semaphores for OS/390.  New config variable 
     apr_process_lock_is_global specifies that the selected inter-process
     lock method is sufficient for APR_LOCKALL (i.e., it blocks all
     threads and processes).  For now, hints.m4 turns on this flag for
     OS/390.  [Jeff Trawick]
     
  *) Get APR_OFF_T_FMT defined properly on Solaris Sparc.
     [Jeff Trawick]

Changes with APR a8
  *) Change the name of the sa_len field in apr_sockaddr_t to salen.
     Some platforms have a macro named sa_len.
     [Tony Finch]
